JB: created header with rounded bottom with intro video in its position

--- a/index.html
+++ b/index.html
@@ -2,15 +2,37 @@
 <html lang="en">
 
 <head>
+    <link href="https://allfont.net/allfont.css?fonts=montserrat-black" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starter Kit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+    <!-- ============ Header ============ -->
+
+    <header class="container-fluid header">
+        <div class="row background">hello</div>
+        <div class="row justify-content-center image">
+            <img src="./images/SK_Kit Cover Top - Correct.png" alt="header">
+        </div>
+        <div class="container-fluid video-container-one justify-content-center">
+            <div class="row video-container">
+                <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video"
+                    frameborder="0"></iframe>
+            </div>
+        </div>
+    </header>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
