--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Starter Kit</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -32,6 +35,27 @@
         </div>
     </header>
 
+    <!-- ========== Get thr kit section =========== -->
+
+    <div class="container-fluid first">
+        <div class="row align-items-start get-the-kit-section">
+            <h1 class="col-12">save time. save money. launch right.</h1>
+            <h2 class="col-12">Learn C# the right way, right away.</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="./images/Starter Kit Full Image.png" class="img-fluid mx-auto d-block"
+                    alt="starter-kit-image">
+            </div>
+        </div>
+
+        <div class="row align-self-end btn">
+            <a href="https://iamtimcorey.onfastspring.com/fc-gst-01">
+                <button type="button" class="btn btn-success">Get the kit</button>
+            </a>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
