JB: finished this section with the gray boxes with the titles underneath, also colors and hover effect where need to be

--- a/index.html
+++ b/index.html
@@ -57,6 +57,71 @@
         </div>
     </div>
 
+    <!-- ================ Info about Get the Kit ================= -->
+
+    <div class="container-fluid get-the-kit-info-row">
+        <div class="row get-the-kit-info-row-one">
+            <div class="col-12 get-the-kit-info-col-one">
+                <h1>tim corey's c# starter kit</h1>
+            </div>
+            <div class="col-12 get-the-kit-info-col-two">
+                <h1>There is nothing mini about this mini-course.</h1>
+            </div>
+        </div>
+        <div class="row get-the-kit-info-row-two justify-content-center">
+            <div class="col-2 get-the-kit-info-col-three-four-five">
+                <section>
+                    <h1>6</h1>
+                    <h5>hours of video</h5>
+                </section>
+            </div>
+            <div class="col-2 get-the-kit-info-col-three-four-five">
+                <section>
+                    <h1>4</h1>
+                    <h5>book & guides</h5>
+                </section>
+            </div>
+            <div class="col-2 get-the-kit-info-col-three-four-five">
+                <section>
+                    <h1>2</h1>
+                    <h5>full-length seminars</h5>
+                </section>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 get-the-kit-info-col-five-half">
+                <section>
+                    <h1>and more...</h1>
+                </section>
+            </div>
+            <div class="col-12 get-the-kit-info-col-six">
+                <section>
+                    <h1>install & setup visual studio</h1>
+                </section>
+            </div>
+            <div class="col-12 get-the-kit-info-col-six">
+                <section>
+                    <h1>learn basic syntax</h1>
+                </section>
+            </div>
+            <div class="col-12 get-the-kit-info-col-six">
+                <section>
+                    <h1>build two basic applications</h1>
+                </section>
+            </div>
+            <div class="col-12 get-the-kit-info-col-six">
+                <section>
+                    <h1>learn professional project planning</h1>
+                </section>
+            </div>
+            <div class="col-12 get-the-kit-info-col-six">
+                <section>
+                    <h1>discover your next career steps</h1>
+                </section>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
