JB: added one row and 2 coumns, one for tim's face and one for a paragraph

--- a/index.html
+++ b/index.html
@@ -122,6 +122,38 @@
         </div>
     </div>
 
+    <!-- ============= MEET TIM COREY ============= -->
+
+    <div class="container-fluid meet">
+        <div class="meet-tim-corey-row justify-content-center">
+            <div class=" meet-tim-corey-col-one">
+                <section>
+                    <img src="./images/IAmTimCoreyLogo.png" class="float-start" alt="Tim Corey">
+                </section>
+            </div>
+            <div class="meet-col-two">
+                <section>
+                    <div>
+                        <h1>meet tim corey</h1>
+                    </div>
+                    <div>
+                        <p>Tim Corey learned software development the hard way, with lots of dead-ends, confusion, and
+                            knowledge gaps. His goal is to make learning software development easier through clear
+                            tutorials, best practices, and relating everything to the real world.
+                        </p>
+
+                        <p>Tim is a three-time Microsoft MVP award recipient. Recognized as a "technology expert who
+                            passionately shares their knowledge with the community." Tim trains millions of developers
+                            on
+                            YouTube, is a highly rated conference speaker, and (most importantly) and expert real-world
+                            developer who cares about your success! </p>
+                    </div>
+
+                </section>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
