--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- ========== Get thr kit section =========== -->
 
-    <div class="container-fluid first">
+    <div class="container-fluid">
         <div class="row align-items-start get-the-kit-section">
             <h1 class="col-12">save time. save money. launch right.</h1>
             <h2 class="col-12">Learn C# the right way, right away.</h2>
