JB: finished testimonials section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <link href="https://allfont.net/allfont.css?fonts=montserrat-black" rel="stylesheet" type="text/css" />
+    <link href="https://allfont.net/allfont.css?fonts=montserrat-black" SameSite=None rel="stylesheet"
+        type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -29,8 +30,8 @@
         </div>
         <div class="container-fluid video-container-one justify-content-center">
             <div class="row video-container">
-                <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video"
-                    frameborder="0"></iframe>
+                <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video" frameborder="0"
+                    SameSite=None></iframe>
             </div>
         </div>
     </header>
@@ -150,6 +151,60 @@
                     </div>
 
                 </section>
+            </div>
+        </div>
+    </div>
+
+    <!-- ============= TESTIMONIALS ============= -->
+
+    <div class="container-fluid testimonials-container">
+        <div class="row">
+            <div class="col-12 testimonials-title">
+                <h1>what tim's students are saying</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8 testimonials">
+                <section>
+                    <h1>"Tim breaks down complicated topics into very simple and easy-to-understand steps."</h1>
+                </section>
+                <div>
+                    <h1>andrew g.</h1>
+                </div>
+            </div>
+
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8 testimonials">
+                <section>
+                    <h1>"I can unequivocally say your instructions, demos, and explinations have been the absolute best
+                        I've come across in my years of struggle trying to learn to program on my own."</h1>
+                </section>
+                <div>
+                    <h1>chris l.</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8 testimonials">
+                <section>
+                    <h1>"I have been teaching myself C# since my CS degree didn't teach me anything about it and with
+                        your knowledge and teaching style I just got my first job offer as a C# developer."</h1>
+                </section>
+                <div>
+                    <h1>corey o.</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-8 testimonials">
+                <section>
+                    <h1>"I'm a student at University and I really love your courses. It's well explained and far more
+                        interesting than our University's programming courses."</h1>
+                </section>
+                <div>
+                    <h1>frederic f.</h1>
+                </div>
             </div>
         </div>
     </div>
