--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
         </div>
     </div>
 
+    <!-- =========== FOOTER ============ -->
+
+    <div class="row justify-content-center">
+        <div class="col-8 footer-title">
+            <h1>what are you waiting for?</h1>
+            <h2>Click below to get your free C# Starter Kit.</h2>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
