--- a/index.html
+++ b/index.html
@@ -210,11 +210,30 @@
     </div>
 
     <!-- =========== FOOTER ============ -->
+    <div class="container-fluid footer-container">
+        <div class="row justify-content-center">
+            <div class="col-8 footer-title">
+                <h1>what are you waiting for?</h1>
+                <h2>Click below to get your free C# Starter Kit.</h2>
+            </div>
+        </div>
 
-    <div class="row justify-content-center">
-        <div class="col-8 footer-title">
-            <h1>what are you waiting for?</h1>
-            <h2>Click below to get your free C# Starter Kit.</h2>
+        <div class="row justify-content-center row-button">
+            <div class="col-3">
+                <a href="https://iamtimcorey.onfastspring.com/fc-gst-01">
+                    <button type="button" class="btn btn-success button">Get the kit</button>
+                </a>
+            </div>
+        </div>
+
+        <div class="row justify-content-center row-last">
+            <div class="col-12 footer-col">
+                <img src="./images/Final Kit Picture.png" class="img final-kit-image" alt="starter kit">
+            </div>
+
+            <div class="col-12 design">
+                <div class="design-footer"></div>
+            </div>
         </div>
     </div>
 
