JB: fixed bug with buttons, both are working now

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 get-the-kit-image">
                 <img src="./images/Starter Kit Full Image.png" class="img-fluid mx-auto d-block"
                     alt="starter-kit-image">
             </div>
         </div>
 
-        <div class="row align-self-end btn">
-            <a href="https://iamtimcorey.onfastspring.com/fc-gst-01">
-                <button type="button" class="btn btn-success">Get the kit</button>
-            </a>
+        <div class="row justify-content-center gtk-button">
+            <div class="col-2 col-button">
+                <a class="btn" href="https://iamtimcorey.onfastspring.com/fc-gst-01" role="button">Get the
+                    kit</a>
+            </div>
         </div>
     </div>
 
