JB: using media queries to optimize responsiveness in mobile and tablet modes

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
     <!-- ============ Header ============ -->
 
     <header class="container-fluid header">
-        <div class="row background">hello</div>
+        <div class="row background"></div>
         <div class="row justify-content-center image">
             <img src="./images/SK_Kit Cover Top - Correct.png" alt="header">
         </div>
         <div class="container-fluid video-container-one justify-content-center">
-            <div class="row video-container">
-                <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video" frameborder="0"
-                    SameSite=None></iframe>
+            <div class="row video-container justify-content-center">
+                <div class="col-lg-12">
+                    <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video" frameborder="0"
+                        SameSite=None></iframe>
+                </div>
+
             </div>
         </div>
     </header>
@@ -71,19 +74,19 @@
             </div>
         </div>
         <div class="row get-the-kit-info-row-two justify-content-center">
-            <div class="col-2 get-the-kit-info-col-three-four-five">
+            <div class="col-lg-2 col-md-4 col-sm-10 get-the-kit-info-col-three-four-five">
                 <section>
                     <h1>6</h1>
                     <h5>hours of video</h5>
                 </section>
             </div>
-            <div class="col-2 get-the-kit-info-col-three-four-five">
+            <div class="col-lg-2 col-md-4 col-sm-10 get-the-kit-info-col-three-four-five">
                 <section>
                     <h1>4</h1>
                     <h5>book & guides</h5>
                 </section>
             </div>
-            <div class="col-2 get-the-kit-info-col-three-four-five">
+            <div class="col-lg-2 col-md-4 col-sm-10 get-the-kit-info-col-three-four-five">
                 <section>
                     <h1>2</h1>
                     <h5>full-length seminars</h5>
@@ -130,7 +133,7 @@
         <div class="meet-tim-corey-row justify-content-center">
             <div class=" meet-tim-corey-col-one">
                 <section>
-                    <img src="./images/IAmTimCoreyLogo.png" class="float-start" alt="Tim Corey">
+                    <img src="./images/IAmTimCoreyLogo.png" alt="Tim Corey">
                 </section>
             </div>
             <div class="meet-col-two">
@@ -220,7 +223,7 @@
         </div>
 
         <div class="row justify-content-center row-button">
-            <div class="col-3">
+            <div class="col-3 col-button-last">
                 <a href="https://iamtimcorey.onfastspring.com/fc-gst-01">
                     <button type="button" class="btn btn-success button">Get the kit</button>
                 </a>
