fixed the non-responsive video

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="container-fluid video-container-one justify-content-center">
             <div class="row video-container justify-content-center">
-                <div class="col-lg-12">
+                <div class="video-container-two">
                     <iframe src="https://www.youtube-nocookie.com/embed/w7PJdV4JyAo" class="embed-video" frameborder="0"
                         SameSite=None></iframe>
                 </div>
